# destiny-repository

./: .buildinfo  .env.example  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Dockerfile.e2e  Dockerfile.tests  README.md  TODO.md  alembic.ini  docker-compose.e2e.yaml  docker-compose.e2e.yml  docker-compose.observable.yml  docker-compose.signoz.yml  docker-compose.yml  genindex.html  index.html  notes.txt  objects.inv  py-modindex.html  pyproject.toml  recreate-local.sh  search.html  searchindex.js  test_import.py
.certs/: ca.crt
.db_seed/: local.sql
.doctrees/: environment.pickle  index.doctree
.doctrees/cli/: cli.doctree  config.doctree  robot-registration.doctree
.doctrees/codebase/: codebase.doctree  config.doctree  structure.doctree
.doctrees/procedures/: batch-importing.doctree  deduplication.doctree  destiny-reference-flow.doctree  oauth.doctree  procedures.doctree  requesting-batch-enhancements.doctree  requesting-single-enhancements.doctree  robot-automation.doctree  robot-registration.doctree  search.doctree
.doctrees/sdk/: auth.doctree  client.doctree  hmac-auth.doctree  labs.doctree  robot-client.doctree  schemas.doctree  sdk.doctree
.github/workflows/: build-test.yml  build.yml  deploy-to-container-app-jobs.yml  deploy-to-development.yml  deploy-to-staging.yml  deploy.yml  documentation.yml  e2e-tests.yml  eppi-import.yml  linting.yml  promote-to-production.yml  promote.yml  release-sdk-to-pypi.yml  rollback-production.yml  tests.yml
.minio/: README.md  seed_fileserver.sh
_images/: graphviz-00383dd3ef8a95cbe14eb3bb94722dff80d1d9e8.png.map  graphviz-00598ec2ead994cc03752ae712f0f913efccabf4.png.map  graphviz-008b0afd03a1d777f17da0ba9eeeaf69b88b2fa3.png.map  graphviz-0113abc82df59713e3367d8d2ed7f859bf5ca9ea.png.map  graphviz-015cf573e19123300669bff4ee69a862981fb0d6.png.map  graphviz-01a35c035f7ab8756852ecc368387c72de299d1c.png.map  graphviz-046351ea7c8147282be4c4626a5a4e591dc718f9.png.map  graphviz-055933275a0c2a1ec2fdc3071f1c809e7f54d0c9.png.map  graphviz-05742e4b98083e41a24c195e4323d906e2162e83.png.map  graphviz-06205eeba2dd7d87fd9a27438ac26d4049cf7437.png.map  graphviz-08fb0c02fdc33618ed19908565c4128b9246551f.png.map  graphviz-0a4bef4286b3a68e1543907f2bc3b8e8401bb65e.png.map  graphviz-0b19dce9f8a1f36e019bf327fb92a85b6c6e2594.png.map  graphviz-0b78f0e13c90a454f8dabaeeae17ed1fb914c05b.png.map  graphviz-0be2fc10c27322d3ef84ac4a0fa5cf8ba6054221.png.map  graphviz-0be5eef10b91d3dd9572e162e62939e93d6a44fc.png.map  graphviz-0f086af5e7b798c1eea1e01a82ca6e68cb0defd2.png.map  graphviz-0f4515589be4efabf140deb61340a9567d023941.png.map  graphviz-0f6b96327edc85999c846754e5517e354c93120b.png.map  graphviz-0fd6e2473468b25dc5d0c4aaa6306eaf66979eb2.png.map  graphviz-10238718852ca4674f948ec06fb58250a4383d36.png.map  graphviz-11831e4cda145cd5bc86a59067768dd621e55b38.png.map  graphviz-1196c3228498b5520d83a7a22a8d05660e08fd7a.png.map  graphviz-12ebb46d6dac9f8da1be3726a6e1b31dab75de54.png.map  graphviz-1319cd2f16d8743df0861cc5529b5332a897d92b.png.map  graphviz-1428bfeedd7c1b74d5a42b0d4590d82bd8873032.png.map  graphviz-1431f9fd1a443f3b9e20046913e9f76ab25ed2e3.png.map  graphviz-1540452653e9f1514f1feb2facf10bc1f888d2f7.png.map  graphviz-16bea208308149bc572d60b2bf58cc841a5df633.png.map  graphviz-182a03ba068651343f1259db5c440f9aa99c6683.png.map  graphviz-1917a931bb4dee410f1d330ece6479b69bf98de2.png.map  graphviz-1a64000619b39ad6ba053c98882299d9ab098032.png.map  graphviz-1c54c57c8a9f39eb27914b3d588a5041a2ed8c2b.png.map  graphviz-1cb0beed0f42d680c6dbc5e581420024580b0c7b.png.map  graphviz-1e08a689753de640051493fdc306d4b4f8db12bf.png.map  graphviz-1e3202fc378578e202b2c691df023c1ab52468b7.png.map  graphviz-202377f57fad1235c37ad9b73abb4badeb5c7a03.png.map  graphviz-221e8b88bc4b91b2e5a5943128ff915646cc13e7.png.map  graphviz-225b1f0187235be4ae2f50b2283a3997734762ec.png.map  graphviz-225bdb9d54909647fcef3978cf8baaa06d98e665.png.map  (+259 more)
_sources/: index.rst.txt
_sources/cli/: robot-registration.rst.txt
_sources/codebase/: codebase.rst.txt  config.rst.txt
_sources/procedures/: oauth.rst.txt  (+7 more)
_static/: custom.css
app/: __init__.py  main.py  run_task.py  tasks.py
cli/: .env.example  .env.production.example  README.md  __init__.py  auth.py  cli.html  client.py  config.html  config.py  get_import_batch_summary.py  invoke_reference_deduplication.py  invoke_reference_repair.py  post_import_file.py  register_robot.py  request_enhancements_for_search.py  robot-registration.html
codebase/: codebase.html  config.html  structure.html
docs/: README.md  conf.py  index.rst  repo-map.md  requirements.txt
keycloak/: destiny-realm.json  local-destiny-realm.json
libs/: README.md
libs/sdk/: .doc.md  README.md  pyproject.toml
libs/sdk/src/destiny_robots/: core.py  robots.py
libs/sdk/src/destiny_sdk/: __init__.py  auth.py  client.py  client_auth.py  core.py  deduplication.py  duplicate_decisions.py  enhancements.py  identifiers.py  imports.py  keycloak_auth.py  references.py  robots.py  search.py  visibility.py
libs/sdk/src/destiny_sdk/labs/: references.py
libs/sdk/src/destiny_sdk/parsers/: __init__.py  eppi_parser.py
libs/sdk/tests/unit/: test_auth.py  test_client.py  test_enhancements.py  test_identifiers.py  test_references.py  test_robots.py
libs/sdk/tests/unit/labs/: test_references.py
libs/sdk/tests/unit/parsers/: test_eppi_parser.py
libs/sdk/tests/unit/test_data/: destiny_references.jsonl  eppi_import.jsonl  eppi_import_with_annotations.jsonl  eppi_import_with_raw.jsonl
procedures/: batch-importing.html  deduplication.html  destiny-reference-flow.html  oauth.html  procedures.html  requesting-batch-enhancements.html  requesting-single-enhancements.html  robot-automation.html  robot-registration.html  search.html
sdk/: auth.html  client.html  hmac-auth.html  labs.html  robot-client.html  schemas.html  sdk.html
tests/: .doc.md  __init__.py  conftest.py  db_utils.py  es_utils.py  factories.py  persistence_models.py  test_main.py
ui/: .dockerignore  .gitignore  Dockerfile  README.md  entrypoint.sh  package-lock.json  package.json
(+601 files in other folders)
