[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = ["Andrew Harvey <andrew@futureevidence.org>"]
description = "A library to support the creation of robots which enhance data in the DESTINY repository"
license = "Apache 2.0"
name = "destiny_sdk"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
pydantic = "^2.11.3"
python = "^3.12"

[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
ruff = "^0.11.5"
